# fn-noisy-inputs

./: .gitignore  CMakeLists.txt  components-and-workflow.md  dt.py  main.py  mlp.py  mlp_model.tflite  pyproject.toml  sdkconfig.featheresp32  serial_listener.py  serial_listener_inference.py
docs/: experiment-description.md  experiment-result.md
include/: gate_model.h  gate_model_api.h  mlp_model_data.h  mlp_weights.h
src/: gate_model.cpp  idf_component.yml  main.c  mlp_inference.cpp
