[project]
name = "fn-noisy-inputs-the-jittery-sensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "micromlgen>=1.1.28",
    "pandas>=3.0.2",
    "pyserial>=3.5",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
]
